# histfeas

./: .gitignore  .gitmodules  .travis.yml  AuroraFwdModel.py  EllLineLength.py  EnergyASI.py  FigureMaker.py  FitVER.py  KMLsites.py  README.md  README.rst  RunHistfeas.py  analysehst.py  arcclass.py  arcexcite.py  camclass.py  campos_impulse.sh  campos_plotmulti.sh  cord.csv  fiducial.py  figure_flame2.py  figure_impulse.py  figure_trans2.py  get1Dcut.py  loadAnalyze.py  main_hist.py  nans.py  observeVolume.py  piprequirements.txt  plotsnew.py  real_apr14.py  realvid_plotmulti.py  realvid_plotmulti.sh  registration.py  requirements.txt  sanityCheck.py  setup.cfg  setup.py  setup.sh  simclass.py  (+4 more)
Examples/: FigureMaker.py  HST2013Apr14T854.py  campos_impulse.py  campos_impulse.sh  figure_flame2.py  figure_impulse.py  figure_trans2.py  numiter_split.py  real_apr14.py  table_flame2.py  table_flame3.py
Plots/: BFGSiter.py  CombineTimePlots.py  EMCCD_fiducial.py  FirstAuroralConjugate.py  KMLsites.py  OneDplots.py  PlotChapmanProfile.py  campos_plotmulti.sh  losscone.py  masks.py  realvid_plotmulti.py  sCMOS_fiducial.py  stormer_height_aurora.py
doc/: masks.dwg
histfeas/: AuroraFwdModel.py  EllLineLength.py  FitVER.py  __init__.py  analysehst.py  arcclass.py  arcexcite.py  camclass.py  diffnumfluxmodel.py  fiducial.py  get1Dcut.py  io.py  loadAnalyze.py  main_hist.py  nans.py  observeVolume.py  plotsnew.py  sanityCheck.py  simclass.py  simulFrame.py  transcararc.py
in/: 2cam_flame.ini  2cam_flame.xlsx  2cam_flame_3arc.ini  2cam_flame_3arc.xlsx  2cam_flame_xsweep.ini  (+37 more)
(+32 files in other folders)
