[metadata]
name = histfeas
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/histfeas
description = Feasibility study for HiST auroral tomography system
keywords =
  ionosphere
  aurora
classifiers =
  Intended Audience :: Science/Research
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Topic :: Scientific/Engineering :: Atmospheric Science
  Programming Language :: Python :: 3.6
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
include_package_data = True
install_requires =
  numpy
  h5py
  scipy
  pandas
  xarray
  matplotlib
  seaborn
  astropy
  Wand
  pathvalidate
  geopy
  simplekml
  pymap3d
  sciencedates
  histutils
  astrometry_azel
  morecvutils
  gridaurora
  lowtran

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy